# technologic

./: .gitignore  README.md
.github/workflows/: mcp-ci.yml  terraform-ci.yml
Hue/: .env.example  Dockerfile  README.md  pyproject.toml
Hue/scripts/: dj_mode_light_cli.py  find_light_id.py  get_bedroom_grouped_light.py  get_bedroom_room.py  list_devices.py  list_rooms.py  prototype_cli.py  register_bridge.py  room_control_cli.py
Hue/src/hue_async/clients/: hue_client.py
Hue/src/hue_async/core/: config.py
Hue/src/hue_async/services/: dj_mode.py  room_service.py
Hue/src/hue_async/web/: app.py  deps.py
Hue/src/hue_async/web/templates/: base.html  index.html  login.html  room.html
mcp-identity-ops/: client.py  pyproject.toml  server.py
mcp-identity-ops/data/: assignments_current.json  assignments_desired.json  users.json
mcp-identity-ops/src/mcp_identity_ops/: __init__.py
okta-automation-toolkit/: requirements.txt
okta-automation-toolkit/src/: jwk_auth_module.py
okta-automation-toolkit/src/users/: fetch_user.py
terraform-k8s-lab/: Makefile  README.md
terraform-k8s-lab/kind/: cluster.yaml
terraform-k8s-lab/scripts/: create-cluster.sh  destroy-cluster.sh
terraform-k8s-lab/terraform/: hue_portal.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
