[project]
name = "hue-async-poc"
version = "0.1.0"
description = "Local-only Philips Hue room controller (prototype + scalable design)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "pydantic-settings>=2.0.0",
  "rich>=13.0.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
  "itsdangerous>=2.2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hue_async.web" = ["templates/*.html"]