[project]
name = "mcp-identity-ops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matthew Morcaldi", email = "mmorcaldi99@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]>=1.27.0",
]

[project.scripts]
mcp-identity-ops = "mcp_identity_ops:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
